k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the server
  labels:
    app: mssql2019
    app.kubernetes.io/component: mssql2019
    app.kubernetes.io/instance: mssql2019
  name: mssql
spec:
  ports:
  - name: tcp
    port: 1433
    protocol: TCP
    targetPort: 1433
  selector:
    name: mssql
  sessionAffinity: None
  type: ClusterIP
