k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: vote-ui
    app.kubernetes.io/part-of: vote-app
  name: vote-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vote-ui
  sessionAffinity: None
  type: ClusterIP
